# hypnus

./: Cargo.toml  README.md  taplo.toml
.github/workflows/: ci.yml
examples/apc/: main.rs
examples/foliage/: main.rs
examples/timer/: main.rs
examples/wait/: main.rs
src/: allocator.rs  cfg.rs  config.rs  data.rs  functions.rs  gadget.rs  hypnus.rs  lib.rs  spoof.rs  stack.rs  types.rs  winapis.rs
src/utils/: cfg.rs  gadget.rs  mod.rs  spoof.rs
